crates/mockiato-compiletest/tests/ui/trait_decl_with_non_type_generics.rs
use mockiato::mockable;

#[mockable]
trait Foo<'a> {}

fn main() {}
